--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,56 @@
+:root {
+  --black: #040714;
+  --white: #f9f9f9;
+
+  --side-padding: 40px;
+}
 html {
   scroll-behavior: smooth;
+  font-size: 16px;
 }
-*{
+*,
+*::after,
+*::before {
   box-sizing: border-box;
-}
-body {
-  background-color: #040714;
-  color: #f9f9f9;
-  min-height : 100vh;
-  font-family: Avenir-Roman, sans-serif;
   margin: 0;
   padding: 0;
+}
+
+body {
+  background-color: var(--black);
+  color: var(--white);
+  min-height: 100vh;
+  font-family: Avenir-Roman, sans-serif;
+  font-size: 1.2rem;
+}
+
+img {
+  object-fit: cover;
+}
+
+a {
+  text-decoration: none;
+  color: var(--white);
+}
+
+ul {
+  list-style-type: none;
+}
+
+@media screen and (min-width: 768px) {
+  body {
+    font-size: 1.2rem;
+  }
+}
+
+@media screen and (min-width: 479px) and (max-width: 768px) {
+  body {
+    font-size: 1rem;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  body {
+    font-size: 0.8rem; /* 14px */
+  }
 }
